plotted time series plots

--- a/notebooks/Preprocessing_and_Data_Exploration.ipynb
+++ b/notebooks/Preprocessing_and_Data_Exploration.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
    ],
    "source": [
     "\n",
-    "# Load the data\n",
+    "# Load the data and perform EDA including plots\n",
     "cleaned_data = load_data_from_directory(output_dir)\n",
     "\n",
     "# Perform EDA\n",
