enhanced TS forcasting and modeling

--- a/notebooks/forcasting_market_trend.ipynb
+++ b/notebooks/forcasting_market_trend.ipynb
@@ -9,10 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# forcasting using lstm models\n",
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join('..')))"
