--- a/notebooks/time_series_forcasting_models.ipynb
+++ b/notebooks/time_series_forcasting_models.ipynb
@@ -124,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to train ARIMA and SARIMA models\n",
+    "# Function to train ARIMA and SARIMA models for TS modeling \n",
     "def train_arima_models(data):\n",
     "    # Ensure Date column is datetime and set it as the index\n",
     "    data.index = pd.to_datetime(data.index)\n",
