added some features on the modeling and forcasting a TS

--- a/notebooks/forcasting_market_trend.ipynb
+++ b/notebooks/forcasting_market_trend.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +119,7 @@
     }
    ],
    "source": [
+    "# plotting forcasts\n",
     "TSLA_analyzer.plot_forecast()\n",
     "SPY_analyzer.plot_forecast()\n",
     "BND_analyzer.plot_forecast()"
