--- a/notebooks/time_series_forcasting_models.ipynb
+++ b/notebooks/time_series_forcasting_models.ipynb
@@ -174,11 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the PyTorch LSTM model\n",
+    "# Define the PyTorch LSTM model for Time series models\n",
     "class LSTMModel(nn.Module):\n",
     "    def __init__(self, input_size=1, hidden_size=50, output_size=1):\n",
     "        super(LSTMModel, self).__init__()\n",
